--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
 </head>
-<body>
+<body style="background-color: black;">
     
+
+    <script src="main.js"></script>
 </body>
 </html>
