--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
 </head>
-<body style="background-color: black;">
+<body style="background-color: white;">
     
+    <div class = "display" style="height: 20px; width: 100px; background-color: bisque; margin: 20px;"></div>
+    <button>0</button>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <button>.</button>
+    <button class = "operator">+</button>
+    <button class = "operator">-</button>
+    <button class = "operator">*</button>
+    <button class = "operator">/</button>
+    <button>AC</button>
+    <button class = "operator">=</button>
+    
+
 
     <script src="main.js"></script>
 </body>
