A bug with multplay has been fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button>.</button>
     <button class = "operator">+</button>
     <button class = "operator">-</button>
-    <button class = "operator">*</button>
+    <button class = "operator">x</button>
     <button class = "operator">/</button>
     <button>AC</button>
     <button class = "operator">=</button>
