Problem with equal button resolved

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="section six">
             <button class="zero">0</button>
             <button>.</button>
-            <button class = "operator equal">=</button>
+            <button class = "operator" style="border-bottom-right-radius: 30px;">=</button>
         </div>
     </div>
     
