Percentage calculation and negative button added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="section two">
             <button class="ac">AC</button>
-            <button class="operator">+/-</button>
+            <button class="negative">+/-</button>
             <button class="operator">%</button>
             <button class = "operator">/</button>
         </div>
